# is-the-mountain-out

./: .dockerignore  .gitignore  CAPTURES.md  CHECKPOINTS.md  CLAUDE.md  GEMINI.md  NOTIFICATIONS.md  README.md  TRAINING.md  WEBCAMS.md  captures.ipynb  classify.ipynb  jupyter_notebook_config.py  jupyter_server_config.py  justfile  migrated  mountain-classify.skill  mountain-trainer.rb  mountain.toml  nomad-dev.hcl  pyproject.toml  start-collector.command  wrangler.toml
.gemini/: settings.json
.gemini/skills/mountain-classify/: SKILL.md
.github/workflows/: build-inference-image.yml  update.yml
checkpoints/: README.md  adapter_config.json  adapter_model.safetensors  classifier.pt
checkpoints_v1_binary/: classifier.pt
collect/: classifier.py  collector.py  notebook_helpers.py  simple_classifier.py  state.py  storage.py  streamlit_classifier.py  sync.py  tray.py
collect/tests/: conftest.py  test_collector.py  test_notebook_helpers.py  test_storage.py  test_tray.py
inference/: Dockerfile  server.py
local-runner/: .env.example  README.md  com.mountain.inference.plist  docker-compose.yml  tick.sh
mountain-capture/: SKILL.md
mountain-capture/assets/: once.hcl
mountain-capture/scripts/: capture_now.py
nomad/: capture_out.hcl  collect.hcl  detect.hcl  once.hcl
scripts/: deploy-inference.sh  deploy-worker.sh  run-local-notifier.sh
terraform/: .gitignore  .terraform.lock.hcl  README.md  cloudflare.tf  cloudflare_worker.tf  main.tf  outputs.tf  pages.tf  r2.tf  terraform.tfstate  variables.tf
tools/: ab_test.py  capture_now.py  capture_out.py  classifier_server.py  cloud_sync.py  detect_mountain.py  evaluate.py  generate_map.py  local_notifier.py  plan.py  predict_state.py  prune_data.py  solar_plan.py
train/: PLAN.md  collector.py  config.toml  config.yaml  config_loader.py  main.py  model.py  pyproject.toml  scheduler.py  tray.py  utils.py  weather.py  webcam.py
train/checkpoints/: adapter_config.json  adapter_model.safetensors  classifier.pt
train/tests/: test_config_loader.py  test_config_r2.py  test_model.py  test_regression.py  test_scheduler.py  test_webcam.py
ui/: check_redirects.cjs  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: config.json
ui/src/: App.tsx  index.css
ui/tests/: proxy_assets.test.ts  redirect_loop.test.ts
web/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
web/public/: history.jsonl  state.json
web/src/: App.tsx  index.css
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: discord-mountain-notify.ts  index.ts
workers/capture/: index.ts
